<resources>
    <string name="app_name">Vgreen Basket</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="order_history">Order History</string>
    <string name="share_application">Share Application</string>
    <string name="logout">Logout</string>
    <string name="view_all">View All</string>
    <string name="vegetable">Vegetable</string>
    <string name="tomato">Tomato</string>
    <string name="potato">Potato</string>
    <string name="onion">Onion</string>
    <string name="bell_pepper">Bell Pepper</string>
    <string name="fruit">Fruit</string>
    <string name="apple">Apple</string>
    <string name="orange">orange</string>
    <string name="watermelon">watermelon</string>
    <string name="banana">banana</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="route">Route</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="login">Login</string>
    <string name="fruit_list">Fruit List</string>
    <string name="http_jmd_infotech_com">http://jmd-infotech.com</string>
    <string name="profile">Profile</string>
    <string name="vegetable_list">Vegetable List</string>
    <string name="search_product">Search Product</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="update_profile">Update Profile</string>
    <string name="topic">VgreenCustomer</string>
    <string name="checkout">Checkout</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="payment_details">Payment Details</string>
    <string name="payment_option">payment option</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="place_order">Place Order</string>
    <string name="change_password">Change Password</string>
    <string name="shop_now">Shop Now</string>
</resources>
