<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:checked="true"
            android:icon="@drawable/ic_vector_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_vector_profile"
            android:title="@string/profile" />


        <item
            android:id="@+id/nav_change_pass"
            android:icon="@drawable/ic_change_password"
            android:title="@string/change_password" />

        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_vector_order_history"
            android:title="@string/order_history" />


        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/ic_vector_share"
            android:title="@string/share_application" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_vector_logout"
            android:title="@string/logout" />

    </group>
</menu>